# shu-ces-course

./: .clang-format  .gitignore  README.md
ComputerScienceDevelopment/: CMakeLists.txt  README.md  plain_text.txt
ComputerScienceDevelopment/Vigenere/: vigenere.hpp
Data-Struct/: README.md  run.sh
Data-Struct/Algo/: CMakeLists.txt
Data-Struct/DS/HashSequence/: main.cpp
Data-Struct/DS/LinkList/polynomial/: polynomial.h
Data-Struct/DS/diagram/: diagram.hpp
DataStruct/: CMakeLists.txt
DataStruct/Algo/Problemsolving-Log/: ProbSolving-Log.cpp
DataStruct/DS/AVLTree/: AVLTree.hpp  main.cpp
DataStruct/DS/HashSequence/: HashSequence.hpp
DataStruct/DS/LinkList/polynomial/: polynomial.cpp
DataStruct/DS/diagram/: diagram.cpp
MLintro/: README.md  problem1_solution.ipynb  problem2_solution.ipynb  problem3_solution.ipynb  problem4_solution.ipynb  report.docx
MLintro/CourseCode/: Code_1_FirstCode.ipynb  Code_2_Essentials.ipynb  Code_3_numpy_pandas_matplot.ipynb
MLintro/Evaluation/: Test_MLC_2024.docx
cs-development/: vige.sh  vigenere_img_key.txt
cs-development/Vigenere/: CMakeLists.txt  vigenere.cpp
